Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -170,6 +170,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
     display: block;
     float: left;
     padding: 0;
+	width: 25%;
 }
 
 /* COMPANY NAME */
@@ -269,7 +270,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 .widget.extendednavigation {
     float: right;
     position: relative;
-    max-width: 691px;
+    width: 75%;
     margin: 12px 0;
 }
 
@@ -278,7 +279,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 }
 
 .widget.extendednavigation ul {
-    float: left;
     margin: 0;
     padding: 0;
 }
